<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.addrecipe.AddActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:theme="@style/Theme.AppCompat.NoActionBar">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:contentScrim="@color/yellow"
            app:expandedTitleMarginEnd="@dimen/_72sdp"
            app:expandedTitleMarginStart="@dimen/_16sdp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/etItem"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_splash"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:riv_corner_radius_bottom_left="@dimen/_20sdp"
                app:riv_corner_radius_bottom_right="@dimen/_20sdp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/white" />

            <TextView
                android:id="@+id/new_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal_category"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/gilroy_bold"
                android:layout_gravity="start"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_bg2"
                android:padding="@dimen/_8sdp"/>

            <ImageButton
                android:id="@+id/imgToolbarBtnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_bg2"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_delete" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_bold"
                        android:padding="@dimen/_10sdp"
                        android:hint="@string/new_meal"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp"
                        android:importantForAutofill="no" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_baseline_access_time_24" />


                            <EditText
                                android:id="@+id/etTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gilroy_light"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:paddingHorizontal="@dimen/_5sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingBottom="@dimen/_10sdp"
                                android:inputType="text"
                                android:hint="@string/_30_min"
                                android:textColor="@color/hintTextColor"
                                android:textSize="@dimen/_10ssp"
                                android:textStyle="bold"
                                android:importantForAutofill="no" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_calorie" />


                            <EditText
                                android:id="@+id/etCal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gilroy_light"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:paddingHorizontal="@dimen/_5sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingBottom="@dimen/_10sdp"
                                android:inputType="text"
                                android:hint="@string/_247_cals"
                                android:textColor="@color/hintTextColor"
                                android:textSize="@dimen/_10ssp"
                                android:textStyle="bold"
                                android:importantForAutofill="no" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_person" />


                            <EditText
                                android:id="@+id/etServing"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gilroy_light"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:inputType="text"
                                android:paddingHorizontal="@dimen/_5sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingBottom="@dimen/_10sdp"
                                android:hint="@string/_3_persons"
                                android:textColor="@color/hintTextColor"
                                android:textSize="@dimen/_10ssp"
                                android:textStyle="bold"
                                android:importantForAutofill="no" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/gilroy_bold"
                    android:layout_centerVertical="true"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <Button
                    android:id="@+id/adBtn"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_add"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_add_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_rv_ingredients"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/instructions"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etInstructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_light"
                        android:inputType="textMultiLine"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textColor="@color/hintTextColor"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/add_new"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:background="@drawable/btn_bg3"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>